--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "watch:chrome": "webpack --config chrome/webpack.config.js -w",
     "build": "npm run clean && npm run build:angular && npm run build:chrome",
     "build:production": "npm run build:angular-production && npm run build:chrome-production && npm run pack",
+    "save": "npm run build:production",
     "watch": "npm run clean && npm-run-all --parallel watch:*",
     "clean": "rimraf angular/dist",
     "pack": "cd angular/dist && bestzip ../../extension-build.zip *"
@@ -39,10 +40,11 @@
     "@angular/cli": "^13.0.3",
     "@angular/compiler-cli": "^13.0.2",
     "@angular/language-service": "^13.0.2",
-    "@types/chrome": "0.0.141",
+    "@types/chrome": "0.0.180",
     "@types/node": "^12.12.32",
     "awesome-typescript-loader": "^5.2.1",
     "bestzip": "^2.1.7",
+    "copy-webpack-plugin": "^10.2.4",
     "npm-run-all": "^4.1.5",
     "rimraf": "^2.7.1",
     "ts-loader": "^9.2.6",
